--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <!-- <link rel="icon" href="./images/logo.svg"> -->
-    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Sacalis</title>
-    <style>
-      body {
-        margin: 0;
-        background-color: #111827;
-      }
-    </style>
+    <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
     <noscript>
